[gd_scene load_steps=6 format=3 uid="uid://cuav8y2tdk2av"]

[ext_resource type="Script" uid="uid://bsxyfaf5bmkcw" path="res://menu.gd" id="1_r1q1u"]
[ext_resource type="Texture2D" uid="uid://clmqx16neri4j" path="res://Art/PlayBotton.png" id="2_sbixa"]
[ext_resource type="FontFile" uid="uid://dajuloy8adj6r" path="res://Art/font/Paaxel-xRjLO.otf" id="2_xarby"]
[ext_resource type="Texture2D" uid="uid://b58rmhrix01vq" path="res://Art/QuitBotton.png" id="3_16q67"]
[ext_resource type="Texture2D" uid="uid://bfa0hkmb81ap4" path="res://Art/BackRound.png" id="4_m1ans"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1q1u")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 116.0
offset_right = 342.0
offset_bottom = 152.0
scale = Vector2(5, 5)
editable = false

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 113.0
offset_right = 1004.0
offset_bottom = 290.0
theme_override_fonts/font = ExtResource("2_xarby")
theme_override_font_sizes/font_size = 81
text = "The Floating Forest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 350.0
offset_right = 242.0
offset_bottom = 483.0
scale = Vector2(1, 1.045)

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_xarby")
text = "
"
icon = ExtResource("2_sbixa")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("3_16q67")
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 762.0
offset_top = 426.0
offset_right = 919.0
offset_bottom = 501.0
scale = Vector2(2, 2)

[node name="Save" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xarby")
text = "Save
"

[node name="Load" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xarby")
text = "Load
"

[node name="Delete" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xarby")
text = "Delete
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(3, 3)

[node name="BackRound" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(588, 337)
texture = ExtResource("4_m1ans")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="button_up" from="HBoxContainer/Load" to="." method="_on_load_button_up"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
